<resources>
    <string name="app_name">DispatchingService</string>
    <string name="title_requests">Заявки</string>
    <string name="title_account">Аккаунт</string>
    <string name="req_address">Адрес</string>
    <string name="req_phone">Телефон</string>
    <string name="req_price">Цена</string>
    <string name="req_description">Описание</string>
    <string name="acc_login">Логин</string>
    <string name="acc_phone">Телефон</string>
    <string name="acc_edit">Редактировать</string>
    <string name="profile">Профиль</string>
    <string name="workers">Исполнители</string>
    <string name="create">Создать</string>
    <string name="edit">Изменить</string>
    <string name="done">Готово</string>
    <string name="cancel">Отмена</string>
    <string name="message">Сообщение</string>
    <string name="description_hint">Опишите проблему подробнее</string>
    <string name="city">Город</string>
    <string name="street">Улица</string>
    <string name="house">Дом</string>
    <string name="corpus">Корпус</string>
    <string name="room">Квартира</string>
    <string name="add_request">Создание заявки</string>

    <string-array name="states">
        <item>Все</item>
        <item>Активные</item>
        <item>Архивные</item>
    </string-array>
</resources>