<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <Spinner
                android:id="@+id/request_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:labelFor="@id/request_city"
                android:text="@string/city"
                app:layout_constraintTop_toBottomOf="@+id/request_type_spinner" />

            <EditText
                android:id="@+id/request_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:labelFor="@id/request_street"
                android:text="@string/street"
                app:layout_constraintTop_toBottomOf="@+id/request_city" />

            <EditText
                android:id="@+id/request_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:layout_editor_absoluteX="16dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/request_street"
                tools:layout_editor_absoluteX="16dp">

                <TextView
                    android:id="@+id/textview13"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/request_house"
                    android:text="@string/house"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/request_house"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textview13" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/request_corpus"
                    android:text="@string/corpus"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toStartOf="@+id/textView11"
                    app:layout_constraintStart_toEndOf="@id/textview13"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/request_corpus"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toStartOf="@+id/request_room"
                    app:layout_constraintStart_toEndOf="@+id/request_house"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/request_room"
                    android:text="@string/room"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/request_room"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

            <EditText
                android:id="@+id/request_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/description_hint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:lines="4"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_request_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@color/colorPrimary"
                android:text="@string/create"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/request_description" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>